SUBDIRS= @EXTRAS_SUBDIRS@

pkgdocdir=@PKGDOCDIR@

nobase_pkgdoc_DATA=\
	bibliography/nest.bib \
	logos/nest.pdf \
	logos/nest.png \
	logos/nest.svg \
	logos/nest-initiative.pdf \
	logos/nest-initiative.png \
	logos/nest-initiative.svg \
	logos/nest-initiative-www.pdf \
	logos/nest-initiative-www.png \
	logos/nest-initiative-www.svg \
	logos/nest-simulated.pdf \
	logos/nest-simulated.png \
	logos/nest-simulated.svg \
	logos/nest-simulated-www.pdf \
	logos/nest-simulated-www.png \
	logos/nest-simulated-www.svg

EXTRA_DIST= README.md
